--- a/Resources/Private/Language/ContentElements/Static/locallang_iconTextLink.xlf
+++ b/Resources/Private/Language/ContentElements/Static/locallang_iconTextLink.xlf
@@ -10,7 +10,7 @@
 				<source>Icon, header, text and link</source>
 			</trans-unit>
 
-			<trans-unit id="iconTextLink.flexform.stretched_link" resname="iconTextLink.flexform.stretched_link">
+			<trans-unit id="flexform.stretched_link" resname="flexform.stretched_link">
 				<source>Enable whole area link</source>
 			</trans-unit>
 		</body>
