--- a/Resources/Private/Language/ContentElements/Static/locallang_imageTextLink.xlf
+++ b/Resources/Private/Language/ContentElements/Static/locallang_imageTextLink.xlf
@@ -10,40 +10,40 @@
 				<source>Image or media, text and link. Will use image before media. Will only render one image or one media.</source>
 			</trans-unit>
 
-			<trans-unit id="imageTextLink.flexform.stretched_link" resname="imageTextLink.flexform.stretched_link">
+			<trans-unit id="flexform.stretched_link" resname="flexform.stretched_link">
 				<source>Enable whole area link</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect" resname="imageTextLink.flexform.hoverEffect">
+			<trans-unit id="flexform.hoverEffect" resname="flexform.hoverEffect">
 				<source>Hover effects</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_disable" resname="imageTextLink.flexform.hoverEffect_disable">
+			<trans-unit id="flexform.hoverEffect_disable" resname="flexform.hoverEffect_disable">
 				<source>Disable</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_hover-1" resname="imageTextLink.flexform.hoverEffect_hover-1">
+			<trans-unit id="flexform.hoverEffect_hover-1" resname="flexform.hoverEffect_hover-1">
 				<source>Hover effect 1</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_hover-2" resname="imageTextLink.flexform.hoverEffect_hover-2">
+			<trans-unit id="flexform.hoverEffect_hover-2" resname="flexform.hoverEffect_hover-2">
 				<source>Hover effect 2</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_hover-3" resname="imageTextLink.flexform.hoverEffect_hover-3">
+			<trans-unit id="flexform.hoverEffect_hover-3" resname="flexform.hoverEffect_hover-3">
 				<source>Hover effect 3</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_hover-4" resname="imageTextLink.flexform.hoverEffect_hover-4">
+			<trans-unit id="flexform.hoverEffect_hover-4" resname="flexform.hoverEffect_hover-4">
 				<source>Hover effect 4</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_hover-5" resname="imageTextLink.flexform.hoverEffect_hover-5">
+			<trans-unit id="flexform.hoverEffect_hover-5" resname="flexform.hoverEffect_hover-5">
 				<source>Hover effect 5</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_hover-6" resname="imageTextLink.flexform.hoverEffect_hover-6">
+			<trans-unit id="flexform.hoverEffect_hover-6" resname="flexform.hoverEffect_hover-6">
 				<source>Hover effect 6</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_hover-7" resname="imageTextLink.flexform.hoverEffect_hover-7">
+			<trans-unit id="flexform.hoverEffect_hover-7" resname="flexform.hoverEffect_hover-7">
 				<source>Hover effect 7</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_hover-8" resname="imageTextLink.flexform.hoverEffect_hover-8">
+			<trans-unit id="flexform.hoverEffect_hover-8" resname="flexform.hoverEffect_hover-8">
 				<source>Hover effect 8</source>
 			</trans-unit>
-			<trans-unit id="imageTextLink.flexform.hoverEffect_hover-9" resname="imageTextLink.flexform.hoverEffect_hover-9">
+			<trans-unit id="flexform.hoverEffect_hover-9" resname="flexform.hoverEffect_hover-9">
 				<source>Hover effect 9</source>
 			</trans-unit>
 		</body>
