--- a/Resources/Private/Language/ContentElements/Static/locallang_imageTextLink.xlf
+++ b/Resources/Private/Language/ContentElements/Static/locallang_imageTextLink.xlf
@@ -3,6 +3,7 @@
 	<file source-language="en" datatype="plaintext" original="EXT:t3kit/Resources/Private/Language/ContentElements/Static/locallang_imageTextLink.xlf" date="2019-04-20UTC12:53:470" product-name="t3kit">
 		<header/>
 		<body>
+
 			<trans-unit id="imageTextLink.title" resname="imageTextLink.title">
 				<source>Image text and link</source>
 			</trans-unit>
@@ -13,6 +14,16 @@
 			<trans-unit id="flexform.stretched_link" resname="flexform.stretched_link">
 				<source>Enable whole area link</source>
 			</trans-unit>
+			<trans-unit id="flexform.image_height" resname="flexform.image_height">
+				<source>Image height (200px by default)</source>
+			</trans-unit>
+			<trans-unit id="flexform.internal_margins" resname="flexform.internal_margins">
+				<source>Enable internal margins</source>
+			</trans-unit>
+			<trans-unit id="flexform.inverted_color" resname="flexform.inverted_color">
+				<source>Inverted color</source>
+			</trans-unit>
+
 		</body>
 	</file>
 </xliff>
