[TASK] add posibility to set image height for picture and svg from CE-s

--- a/Resources/Private/Language/ContentElements/Static/locallang_imageTextLink.xlf
+++ b/Resources/Private/Language/ContentElements/Static/locallang_imageTextLink.xlf
@@ -20,6 +20,9 @@
 			<trans-unit id="flexform.inverted_color" resname="flexform.inverted_color">
 				<source>Inverted color</source>
 			</trans-unit>
+			<trans-unit id="flexform.image_height" resname="flexform.image_height">
+				<source>Image height</source>
+			</trans-unit>
 
 		</body>
 	</file>
